--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/LeoTatarin/AutomatizeComGrunt#readme",
   "devDependencies": {
     "grunt": "^1.6.1",
+    "grunt-concurrent": "^3.0.0",
     "grunt-contrib-less": "^3.0.0",
     "grunt-contrib-sass": "^2.0.0"
   }
